--- a/170516/Content/bootstrap.css
+++ b/170516/Content/bootstrap.css
@@ -1152,7 +1152,7 @@ hr {
   margin-top: 21px;
   margin-bottom: 21px;
   border: 0;
-  border-top: 1px solid #596a7b;
+  border-top: 1px solid #eee;
 }
 .sr-only {
   position: absolute;
