--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -15,59 +15,163 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="@Url.Action("Index","Home")">Construction</a>
+    <div class="page-wrapper">
+        <div class="header-container" style="padding-bottom: 0px;">
+            <div class="header-top dark ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-3 col-sm-6 col-md-9">
+                            <div class="header-top-first clearfix">
+                                <ul class="social-links circle small clearfix hidden-xs">
+                                    <li class="skype">
+                                        <a target="_blank" href="http://www.skype.com">
+                                            <i class="fa fa-skype"></i>
+                                        </a>
+                                    </li>
+                                    <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
+                                    <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                                </ul>
+                                <div class="social-links hidden-lg hidden-md hidden-sm circle small">
+                                    <div class="btn-group dropdown">
+                                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-share-alt"></i></button>
+                                        <ul class="dropdown-menu dropdown-animation">
+                                            <li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li>
+                                            <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+                                            <li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
+                                            <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <ul class="list-inline hidden-sm hidden-xs">
+                                    <li><i class="fa fa-map-marker pr-5 pl-10"></i>K10/27 Phan Châu Trinh, Hải Châu, Đà Nẵng</li>
+                                    <li><i class="fa fa-phone pr-5 pl-10"></i>+12 123 123 123</li>
+                                    <li><i class="fa fa-envelope-o pr-5 pl-10"></i> han.solo@mail.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xs-9 col-sm-6 col-md-3">
+                            <div id="header-top-second" class="clearfix">
+                                <div class="header-top-dropdown text-right">
+                                    <div class="btn-group dropdown">
+                                        <button type="button" class="btn dropdown-toggle btn-default btn-sm" data-toggle="dropdown"><i class="fa fa-shopping-cart pr-10"></i> Giỏ Hàng</button>
+                                        <ul class="dropdown-menu dropdown-menu-right dropdown-animation" style="z-index: 9000;">
+                                            <li>
+                                                <!-- put the cart in here -->
+                                                <table class="table table-hover">
+                                                    <thead>
+                                                        <tr>
+                                                            <th class="quantity">QTY</th>
+                                                            <th class="product">Product</th>
+                                                            <th class="amount">Subtotal</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td class="quantity">2 x</td>
+                                                            <td class="product"><a href="shop-product.html">Android 4.4 Smartphone</a><span class="small">4.7" Dual Core 1GB</span></td>
+                                                            <td class="amount">$199.00</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="quantity">3 x</td>
+                                                            <td class="product"><a href="shop-product.html">Android 4.2 Tablet</a><span class="small">7.3" Quad Core 2GB</span></td>
+                                                            <td class="amount">$299.00</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="quantity">3 x</td>
+                                                            <td class="product"><a href="shop-product.html">Desktop PC</a><span class="small">Quad Core 3.2MHz, 8GB RAM, 1TB Hard Disk</span></td>
+                                                            <td class="amount">$1499.00</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="total-quantity" colspan="2">Total 8 Items</td>
+                                                            <td class="total-amount">$1997.00</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                                <div class="panel-body text-right">
+                                                    <a href="shop-cart.html" class="btn btn-group btn-gray btn-sm">View Cart</a>
+                                                    <a href="shop-checkout.html" class="btn btn-group btn-gray btn-sm">Checkout</a>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="@Url.Action("Index","Home")">Trang Chủ</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Showcase", "Product")">Sản Phẩm</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("About","Home")">Giới Thiệu</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Contact", "Home")">Liên Hệ</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-    <div class="container main-content">
-        <div class="row">
-            @RenderBody()
+            <header class="header fixed clearfix">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 ">
+                            <div class="header-left clearfix">
+                                <div id="logo" class="logo">
+                                    <a href="@Url.Action("Index", "Home")"><img id="logo_img" src="http://htmlcoder.me/preview/the_project/v.1.2/template/images/logo_light_blue.png" alt="Trang Chủ"></a>
+                                </div>
+                                <div class="site-slogan">
+                                    Công Ty Xây Dựng Construction
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="header-right clearfix">
+                                <div class="main-navigation animated with-dropdown-buttons">
+                                    <nav class="navbar navbar-default" role="navigation">
+                                        <div class="container-fluid">
+
+                                            <!-- Toggle get grouped for better mobile display -->
+                                            <div class="navbar-header">
+                                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+                                                    <span class="sr-only">Toggle navigation</span>
+                                                    <span class="icon-bar"></span>
+                                                    <span class="icon-bar"></span>
+                                                    <span class="icon-bar"></span>
+                                                </button>
+                                            </div>
+                                            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                                                <!-- main-menu -->
+                                                <ul class="nav navbar-nav ">
+                                                    <li class="mega-menu">
+                                                        <a href="@Url.Action("Index","Home")">Trang Chủ</a>
+                                                    </li>
+                                                    <li class="mega-menu">
+                                                        <a href="@Url.Action("Showcase", "Product")">Sản Phẩm</a>
+                                                    </li>
+                                                    <li class="mega-menu">
+                                                        <a href="@Url.Action("About","Home")">Giới Thiệu</a>
+                                                    </li>
+                                                    <li class="mega-menu">
+                                                        <a href="@Url.Action("Contact", "Home")">Liên Hệ</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
         </div>
 
-        @*<hr>*@
+        @RenderBody();
 
+        <footer id="footer" class="clearfix ">
+            <div class="subfooter">
+                <div class="container">
+                    <div class="subfooter-inner">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="text-center">Copyright © 2016 The Project by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>. All Rights Reserved</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-    <!-- Footer -->
-    <footer>
-        <div class="container-fluid">
-            <div class="copy text-center" style="height :52px; margin-top: 20px; ">
-                Copyright © 2016 <a href="#">OUR DEVELOPER</a>
-            </div>
-
-        </div>
-    </footer>
-
-
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
